# Tiny-Shading-Language

./: .gitignore  CMakeLists.txt  CNAME  GNUmakefile  README.md  grammer.y  index.md  laxer.lex  lex.l  make.bat  run.sh  shader.tsl
.github/workflows/: build.yml
build-files/cmake/: tsl-config.cmake.in
build-files/mac/: getdep.sh
build-files/ubuntu/: getdep.sh  getdep_bionic.sh  getdep_xenial.sh
build-files/win/: getdep.ps1  parse_arguments.cmd  reset_variables.cmd
cmake/: tsl-config.cmake  tsl-config.cmake.in
dep/win/flex_bison/custom_build_rules/Bison/: win_bison_custom_build.targets  win_bison_custom_build.xml
example/: shader.tsl  shader_first.tsl
flex_bison/win/x86_64/: files.txt
llvm_10_0_0/: README.md
llvm_10_0_0/linux/x86_64/: files.txt
llvm_10_0_0/mac/: .gitattributes
llvm_10_0_0/mac/arm64/: files.txt
llvm_10_0_0/mac/x86_64/: files.txt
llvm_10_0_0/win/: .gitattributes
scripts/: get_dependencies.py  verify_builds.py
src/: grammer.y  lex.l  main.cpp
src/compiler/: ast.cpp  ast.h  ast_print.cpp  compiler.cpp  compiler.h  compiler_impl.cpp  compiler_impl.h  grammar.y  lex.l  platform.h  types.h
src/core_lib/: CMakeLists.txt  main.cpp
src/core_lib/compiler/: ast.cpp  ast.h  ast_print.cpp  closure_register.cpp  closure_register.h  compiler.cpp  compiler.h  compiler_impl.cpp  compiler_impl.h  global_module.cpp  global_module.h  grammar.y  lex.l  llvm_util.h  shader_unit_pvt.h  tsl_std.h  types.h
src/core_lib/system/: shading_context.cpp  shading_system.cpp
src/core_lib/test/: functions.cpp  llvm.cpp  multi_thread.cpp  system.cpp
src/include/: closure.h  common.h  export.h  global.h  shader_arg_types.h  shading_callback.h  shading_context.h  shading_system.h  status.h  tsl_args.h  tsl_define.h  tsl_system.h  tsl_version.h  tslversion.h  tslversion.h.in
src/llvm_test/: CMakeLists.txt  llvm_test.cpp  main.cpp
src/system/: shading_context.cpp  shading_system.cpp
src/test/: ast_parse.cpp  comments.cpp  data_type.cpp  empty.cpp  expression.cpp  functions.cpp  llvm.cpp  logic.cpp  math.cpp  multi_thread.cpp  numbers.cpp  system.cpp  test_common.h  unit_test.cpp  variables.cpp
src/tsl_lib/: CMakeLists.txt
src/tsl_lib/compiler/: ast.cpp  ast.h  ast_memory_janitor.cpp  ast_memory_janitor.h  ast_print.cpp  compile_context.cpp  compile_context.h  compiler.cpp  compiler.h  compiler_impl.cpp  compiler_impl.h  global_module.cpp  global_module.h  grammar.y  internal_define.h  lex.l  llvm_util.h  shader_pvt.h  shader_unit_pvt.h  str_helper.cpp  str_helper.h  types.h
src/tsl_lib/system/: callback.cpp  impl.h  shader_resource_impl.h  shading_context.cpp  shading_system.cpp  texture_impl.h
src/tsl_sample/: CMakeLists.txt  main.cpp  rt_bxdf.cpp  rt_bxdf.h  rt_common.h  rt_core.cpp  rt_material.cpp  rt_material.h  rt_tsl.cpp  rt_tsl.h
src/tsl_test/: CMakeLists.txt  main.cpp
src/tsl_test/test/: array.cpp  basic.cpp  callback.cpp  closures.cpp  comments.cpp  expression.cpp  functions.cpp  global_value.cpp  logic.cpp  math.cpp  multi_thread.cpp  numbers.cpp  output.cpp  real_algorithm.cpp  real_algorithms.cpp  shader_group.cpp  shader_resource.cpp  struct.cpp  system.cpp  test_common.cpp  test_common.h  texture.cpp  variables.cpp
